--- a/format.css
+++ b/format.css
@@ -5,7 +5,7 @@
 }
 
 #body-background{
-    background-image: url("revised website/images/background1.gif");
+    background-image: url("images/background1.gif");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
